<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\HasMany;

class Booking extends Model
{
    use HasFactory;

    protected $fillable = [
        'user_id',
        'room_id',
        'workflow_id',
        'event_name',
        'event_description',
        'event_scope',
        'booking_date',
        'booking_end_date',
        'start_time',
        'end_time',
        'current_step',
        'status',
        'revision_count',
        'pdf_path',
    ];

    protected function casts(): array
    {
        return [
            'booking_date' => 'date',
            'booking_end_date' => 'date',
            'start_time' => 'datetime:H:i:s',
            'end_time' => 'datetime:H:i:s',
        ];
    }

    protected static function booted(): void
    {
        static::saving(function (Booking $booking) {
            if (empty($booking->booking_end_date)) {
                $booking->booking_end_date = $booking->booking_date;
            }
        });
    }

    public function user(): BelongsTo
    {
        return $this->belongsTo(User::class);
    }

    public function room(): BelongsTo
    {
        return $this->belongsTo(Room::class);
    }

    public function workflow(): BelongsTo
    {
        return $this->belongsTo(Workflow::class);
    }

    public function attachments(): HasMany
    {
        return $this->hasMany(BookingAttachment::class);
    }

    public function approvals(): HasMany
    {
        return $this->hasMany(Approval::class);
    }

    public function logs(): HasMany
    {
        return $this->hasMany(BookingLog::class);
    }

    public function bookingSteps(): HasMany
    {
        return $this->hasMany(BookingStep::class)->orderBy('step_order', 'asc');
    }

    public function getProgressPercentageAttribute(): int
    {
        if ($this->status === 'Approved') {
            return 100;
        }

        if ($this->status === 'Rejected' || $this->status === 'Cancelled') {
            return 0;
        }

        // Prefer instantiated booking_steps chain; fallback to workflow template steps.
        $totalSteps = $this->bookingSteps->count();
        if ($totalSteps === 0) {
            $totalSteps = $this->workflow?->steps?->count() ?? 0;
        }

        if ($totalSteps === 0) {
            return 0;
        }

        // current_step starts at 1. If it's at step 1, 0% is done.
        $completedSteps = $this->current_step - 1;

        return (int) round(($completedSteps / $totalSteps) * 100);
    }
}
