---
config:
  layout: elk
---
classDiagram
    direction TB

    %% ===== SERVICES =====
    class WorkflowBridgeService {
        <<Service>>
        +buildAndPersistChain(booking, eventScope): Collection~BookingStep~
        +resolveStepChain(booking, eventScope): array
        +rebuildChain(booking, eventScope): Collection~BookingStep~
        -fetchWorkflowSteps(unitId, context): Collection~WorkflowStep~
        -findBemUnit(): Unit
        -findPusatUnit(): Unit
    }

    class LoggerService {
        <<Service>>
        +logAction(bookingId, action, stepId, notes): BookingLog
    }

    %% ===== CONCEPTUAL ENTITIES (Unified Model & Controller) =====
    class User {
        -BigInt id
        -String name
        -String email
        -String password
        -BigInt role_id
        -BigInt unit_id
        -BigInt position_id
    }

    class Role {
        -BigInt id
        -String name
        -String description
    }

    class Unit {
        -BigInt id
        -String unit_name
        -String level: enum(Pusat,Jurusan,Organisasi)
        -String description
        -BigInt parent_id
        +index(Request): JsonResponse
        +store(Request): JSON
        +show(id): JSON
        +update(Request, id): JSON
    }

    class Building {
        -BigInt id
        -String building_name
        -String location
        +index(): array
        +store(Request): Model
        +update(Request, building): void
        +destroy(building): void
        -authorizeSuperAdmin(): void
    }

    class Room {
        -BigInt id
        -String room_name
        -String room_code
        -Integer capacity
        -String description
        -BigInt building_id
        -BigInt unit_id
        +index(): JSON
        +store(Request): Response
        +update(Request, id): Response
        +destroy(id): JSON
        +showApi(id): JSON
        +blockRoom(Request): Response
    }

    class Position {
        -BigInt id
        -String name
        -BigInt unit_id
        +index(): JSON
        +store(Request): JSON
    }

    class Workflow {
        -BigInt id
        -String name
        -String description
        -BigInt unit_id
        +index(): JSON
        +store(Request): JSON
        +show(id): JSON
        +update(Request, id): JSON
        +destroy(id): JSON
        +syncDetails(Request, id): JSON
    }

    class WorkflowStep {
        -BigInt id
        -BigInt workflow_id
        -BigInt position_id
        -Integer step_order
        -Boolean requires_attachment
        +store(Request): JSON
        +update(Request, id): JSON
        +destroy(id): JSON
    }

    class WorkflowRequirement {
        -BigInt id
        -BigInt workflow_id
        -String document_name
        -Boolean is_mandatory
        +store(Request): JSON
        +update(Request, id): JSON
        +destroy(id): JSON
    }

    class Booking {
        -BigInt id
        -BigInt user_id
        -BigInt room_id
        -BigInt workflow_id
        -String event_name
        -String event_description
        -String event_scope
        -Date booking_date
        -Date booking_end_date
        -Time start_time
        -Time end_time
        -String status: enum(Draft,Pending,Approved,Rejected,Revised,Cancelled)
        -Integer current_step
        -Integer revision_count
        -String pdf_path
        +index(): JSON
        +showBookingForm(): View
        +create(): JSON
        +store(Request): JSON
        +show(id): JSON
        +cancel(id): JSON
        +update(Request, id): JSON
    }

    class BookingStep {
        -BigInt id
        -BigInt booking_id
        -BigInt position_id
        -Integer step_order
        -Boolean requires_attachment
        -String tier_label
    }

    class BookingAttachment {
        -BigInt id
        -BigInt booking_id
        -BigInt requirement_id
        -BigInt uploader_id
        -String document_type
        -String file_path
    }

    class Approval {
        -BigInt id
        -BigInt booking_id
        -BigInt approver_id
        -BigInt step_id
        -BigInt booking_step_id
        -String approval_status: enum(Pending,Approved,Rejected)
        -String notes
        -String signature_image
        -String qr_code
        -DateTime approved_at
        -Integer attempt
        +index(Request): JSON
        -formatApprovalResponse(booking, positionId): array
        +approve(Request, id): JSON
        +reject(Request, id): JSON
        +history(Request): JSON
        +verify(booking_code): View
    }

    class BookingLog {
        -BigInt id
        -BigInt booking_id
        -BigInt actor_id
        -BigInt step_id
        -String action: enum(SUBMITTED,APPROVED,REJECTED,REVISED,CANCELLED,FINALIZED,BYPASS_APPROVED)
        -String notes
    }

    %% ===== RELATIONSHIPS =====
    Role "1" <-- "0..*" User : memiliki
    Unit "1" <-- "0..*" User : menaungi
    Position "1" <-- "0..*" User : dijabat oleh
    Unit "1" <-- "0..*" Unit : parent-child
    Building "1" *-- "0..*" Room : contains
    Unit "1" <-- "0..*" Room : owns
    Unit "1" <-- "0..*" Position : has
    Unit "1" <-- "0..*" Workflow : defines
    Workflow "1" *-- "1..*" WorkflowStep : terdiri dari
    Workflow "1" *-- "0..*" WorkflowRequirement : mensyaratkan
    Position "1" <-- "0..*" WorkflowStep : assigned to
    User "1" <-- "0..*" Booking : creates
    Room "1" <-- "0..*" Booking : booked by
    Workflow "1" <-- "0..*" Booking : uses
    Booking "1" *-- "0..*" BookingStep : has steps
    Position "1" <-- "0..*" BookingStep : assigned to
    Booking "1" *-- "1..*" Approval : has approvals
    User "1" <-- "0..*" Approval : approves as
    WorkflowStep "1" <-- "0..*" Approval : references
    BookingStep "1" <-- "0..*" Approval : references
    Booking "1" *-- "0..*" BookingAttachment : has attachments
    WorkflowRequirement "1" <-- "0..*" BookingAttachment : fulfills
    Booking "1" *-- "1..*" BookingLog : logged in
    User "1" <-- "0..*" BookingLog : performed by
    WorkflowStep "1" <-- "0..*" BookingLog : references

    %% ===== SERVICE DEPENDENCIES =====
    Booking ..> LoggerService : uses
    Booking ..> WorkflowBridgeService : uses
    Approval ..> WorkflowBridgeService : uses
    Approval ..> LoggerService : uses
    WorkflowBridgeService ..> Booking : updates
    WorkflowBridgeService ..> BookingStep : persists
    WorkflowBridgeService ..> Workflow : references
    WorkflowBridgeService ..> WorkflowStep : references
    LoggerService ..> BookingLog : writes